# tinyrtc

./: .gitignore  .gitmodules  ARCHITECTURE.md  AUDIO_CODEC_UPDATE.md  CMakeLists.txt  LICENSE  README.md  TASKS.md
demo/: CMakeLists.txt  common.c  common.h  demo_receiver.c  demo_sender.c
docs/: DEVELOPMENT.md  signaling.md
docs/memory/: API_CHANGES.md  ARCHITECTURE_NOTES.md  BUGS.md  DEVNOTES.md
include/tinyrtc/: media_codec.h  peer_connection.h  signaling.h  tinyrtc.h
src/: media_codec.c  peer_connection.c  tinyrtc.c
src/cc/: congestion_control.c
src/ice/: ice.c  stun.c
src/include/: common.h  congestion_control.h  dtls_srtp_internal.h  ice_internal.h  media.h  network.h  peer_connection_internal.h  sdp_internal.h
src/media/: dtls.c  rtp.c  srtp.c
src/signal/: sdp_generator.c  sdp_parser.c
src/signaling/: signaling.c
tests/: CMakeLists.txt  demo_help_matches_auto_signaling.sh  demo_help_omits_manual_sdp_flags.sh  docs_match_auto_signaling_only.sh  minunit.h  test_dtls.c  test_jitter_buffer.c  test_peer_connection.c  test_roundtrip.c  test_rtp.c  test_sdp.c  test_signaling.c  test_srtp.c  test_stun.c  tests_main.c
tools/: browser_test.html  simple-signaling-server-raw.py  simple-signaling-server.py
